--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -96,7 +96,7 @@ blockquote cite:before {
 
 .title-slide h1:before {
   float: left;
-  content: url('../images/cds_logo.png');
+  content: url('../images/CDS_Logo_French_LONG_black.png');
   border-right: 15px solid #ffcd33;
   padding-right: 40px;
   padding-left: 0px;
